@@ -1,3 +1,7 @@
+2006-02-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* various: don't make get_map/get_map_num segfault when undefined
+	* objs/virstone.*: renamed map/pos functions to get/set_target_pos/map
+
 2006-02-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* actors.cc: fix crash when actor approaches from off-screen
 
